--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProjectStarter</title>
+  <title>Nodes Trello Project Board Creator</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="mat-typography">
+<body class="mat-typography mat-app-background">
   <app-root></app-root>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
